--- a/packages/components/src/components/Toast/components/ToastRegion/ToastRegion.module.css
+++ b/packages/components/src/components/Toast/components/ToastRegion/ToastRegion.module.css
@@ -6,6 +6,22 @@
   z-index: var(--kbq-layer-toast);
 }
 
+.base[data-placement^='top'] > * {
+  margin-block-end: var(--kbq-size-s);
+
+  &:first-child {
+    margin-block-end: 0;
+  }
+}
+
+.base[data-placement^='bottom'] > * {
+  margin-block-start: var(--kbq-size-s);
+
+  &:last-child {
+    margin-block-start: 0;
+  }
+}
+
 .bottom {
   inset-block-end: var(--kbq-size-l);
   inset-inline-start: 50%;
